Fix: Erased option to not display site-name when on mobile, and changed how logo is displayed

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -216,8 +216,8 @@ footer{
     i.fas{
       display: inline;
     }
-    .logo.logo-name{
-      display: none;
+    .logo{
+      margin: auto 0;
     }
     .mobile-nav{
       // display: none;
